<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.AdvancedSearchSettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/cuisine_switch"
        style="@style/Theme.Spoonzilla"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/cuisine_switch_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/include_cuisine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/include_cuisine_button_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/diet_switch"
        style="@style/Theme.Spoonzilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/diet_switch_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/include_diet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/include_diet_button_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/intolerances_switch"
        style="@style/Theme.Spoonzilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/intolerances_switch_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/include_intolerances_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/include_intolerances_button_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/meal_type_switch"
        style="@style/Theme.Spoonzilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/meal_type_switch_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/include_meal_type_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/include_meal_type_button_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:hint="@string/time_cook_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/instructions_switch"
        style="@style/Theme.Spoonzilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/instructions_switch_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/advanced_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/advanced_search_settings_menu_item_margin"
        android:text="@string/advanced_search_button" />

</androidx.appcompat.widget.LinearLayoutCompat>